# TA-TOS

./: CMakeLists.txt  README.md  build_and_run.sh  eval.py  package.xml
TOSeg-Road-gt/road_easy/: livox-2-gt-100.json  livox-2-gt-100.pcd  livox-2-gt-101.json  livox-2-gt-101.pcd  livox-2-gt-102.json  livox-2-gt-102.pcd  livox-2-gt-103.json  livox-2-gt-103.pcd  livox-2-gt-1394.json  livox-2-gt-1394.pcd  livox-2-gt-1395.json  livox-2-gt-1395.pcd  livox-2-gt-1396.json  livox-2-gt-1396.pcd  livox-2-gt-1397.json  livox-2-gt-1397.pcd  livox-2-gt-1398.json  livox-2-gt-1398.pcd  livox-2-gt-1399.json  livox-2-gt-1399.pcd  livox-2-gt-1400.json  livox-2-gt-1400.pcd  livox-2-gt-1401.json  livox-2-gt-1401.pcd  livox-2-gt-1402.json  livox-2-gt-1402.pcd  livox-2-gt-1403.json  livox-2-gt-1403.pcd  livox-2-gt-1404.json  livox-2-gt-1404.pcd  livox-2-gt-1405.json  livox-2-gt-1405.pcd  livox-2-gt-1406.json  livox-2-gt-1406.pcd  livox-2-gt-1407.json  livox-2-gt-1407.pcd  livox-2-gt-1408.json  livox-2-gt-1408.pcd  livox-2-gt-1409.json  livox-2-gt-1409.pcd  (+478 more)
TOSeg-Road-gt/road_hard/: livox-1-gt-100.json  livox-1-gt-100.pcd  livox-1-gt-101.json  livox-1-gt-101.pcd  livox-1-gt-102.json  livox-1-gt-102.pcd  livox-1-gt-103.json  livox-1-gt-103.pcd  livox-1-gt-104.json  livox-1-gt-104.pcd  livox-1-gt-105.json  livox-1-gt-105.pcd  livox-1-gt-106.json  livox-1-gt-106.pcd  livox-1-gt-107.json  livox-1-gt-107.pcd  livox-1-gt-108.json  livox-1-gt-108.pcd  livox-1-gt-109.json  livox-1-gt-109.pcd  livox-1-gt-110.json  livox-1-gt-110.pcd  livox-1-gt-111.json  livox-1-gt-111.pcd  livox-1-gt-112.json  livox-1-gt-112.pcd  livox-1-gt-113.json  livox-1-gt-113.pcd  livox-1-gt-114.json  livox-1-gt-114.pcd  livox-1-gt-115.json  livox-1-gt-115.pcd  livox-1-gt-116.json  livox-1-gt-116.pcd  livox-1-gt-117.json  livox-1-gt-117.pcd  (+606 more)
include/: segmentation.h  utils.h  visualizatioin.h
src/: tatos.cpp
(+1741 files in other folders)
